[package]
name = "wasmchat"
version = "0.1.0"
# rust-version="1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wasmchat"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "=0.2.79"
wasm-bindgen-futures = "=0.3.27"
wasm-logger = "=0.2.0"
web-sys = "=0.3.56"
strum = "=0.24.0"
strum_macros = "=0.24.0"
serde = "=1.0.136"
serde_json = "=1.0.79"
serde_derive = "=1.0.136"
log = "=0.4"
# stdweb = "=0.4.0"
yew = "=0.19.3"
js-sys = "=0.3.56"
trunk = "=0.15.0"
serde-wasm-bindgen = "0.2"
